compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify8.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn main() { let x: #(x, x) = #(5, 5.0) x }"
---
----- SOURCE CODE
fn main() { let x: #(x, x) = #(5, 5.0) x }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:30
  │
1 │ fn main() { let x: #(x, x) = #(5, 5.0) x }
  │                              ^^^^^^^^^

Expected type:

    #(x, x)

Found type:

    #(Int, Float)
